--- a/scripts/pca_BVOC.Rmd
+++ b/scripts/pca_BVOC.Rmd
@@ -84,12 +84,8 @@ colnames(BVOC_2306_log) <- greek(colnames(BVOC_2306_log))
 
 ```{r}
 #theme settings
-mytheme <-theme(axis.title = element_text(size = 7),
-                axis.text = element_text(size = 6),
-                axis.line = element_line(linewidth = 0.2), 
-                
-                legend.title = element_text(size = 6.5), 
-                legend.text = element_markdown(size = 5.5), 
+mytheme <-theme(text = element_text(color = "black"), 
+                axis.text = element_text(color = "black"), 
                 legend.key.size = unit(8, "pt"), 
                 legend.spacing.x = unit(0, "mm"))
 ```
@@ -102,6 +98,8 @@ BVOC_2306_ga <- rownames_to_column(BVOC_2306, var = "ID")
 BVOC_2306_ga <- cbind(population = metadata$population, BVOC_2306_ga)
 BVOC_2306_ga <- gather(BVOC_2306_ga, "BVOC", "emission", c(-ID, -population))
 
+labeller <- c(AJ = "Ajigasawa", AZ = "Azouji", YK = "Yakushima")
+
 #assign colors to each terpene
 col_BVOC <- c(colorRampPalette(c("green2", "grey30", "yellow2"))(12), 
               "purple3", "blue3")
@@ -112,17 +110,22 @@ p_BVOC <- ggplot(data = BVOC_2306_ga, mapping = aes(x = ID, y = emission,
                                                     fill = factor(BVOC, 
                                                                   levels = colnames(BVOC_2306))))
 p_BVOC <- p_BVOC + geom_bar(stat = "identity")
-p_BVOC <- p_BVOC + theme_classic()
+p_BVOC <- p_BVOC + theme_classic(base_size = 11)
 p_BVOC <- p_BVOC + mytheme
 p_BVOC <- p_BVOC + scale_fill_manual(values = col_BVOC)
 p_BVOC <- p_BVOC + scale_y_continuous(labels = label_comma())
-p_BVOC <- p_BVOC + facet_wrap(~ population, scales = "free_x")
+p_BVOC <- p_BVOC + facet_wrap(~ population, scales = "free_x", 
+                              labeller = labeller(population = labeller))
 p_BVOC <- p_BVOC + labs(fill = "Terpenes") +
-  ylab(expression(paste("Basal Emission Rate (ng ", {gdw^-1}, " ", {h^-1}, ")")))
+  ylab(expression(paste("Basal emission rate (ng ", {gdw^-1}, " ", {h^-1}, ")"))) +
+  labs()
 p_BVOC <- p_BVOC + mytheme + 
-  theme(axis.title.x = element_blank(), 
-        axis.text.x = element_blank(), 
-        strip.text.x = element_text(size = 7))
+  theme(text = element_text(color = "black"), 
+        strip.text = element_text(size = 6),
+        legend.title = element_text(size = 8), 
+        legend.text = element_markdown(size = 7),
+        axis.title.x = element_blank(), 
+        axis.text.x = element_blank())
 show(p_BVOC)
 
 ggsave(plot = p_BVOC, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/barplot_BVOC.png"), 
@@ -145,6 +148,14 @@ summary(pca_BVOC_log_rm)
 col_BVOC <- c(rep("green3", 12), "purple3", "blue3")
 col_pop <- colorRampPalette(c("dodgerblue", "orangered"))(3)
 
+p_pca <- autoplot(pca_BVOC_log_rm, 
+                  data = cbind(BVOC_2306_log[, -c(14)], 
+                               population = metadata$population), 
+                  x = 1, y = 2,
+                  color = "population", 
+                  scale = 1
+                  )
+
 #scale loading vectors
 #see https://rdrr.io/cran/ggfortify/src/R/plotlib.R
 loadings_sc <- data.frame(PC1 = pca_BVOC_log_rm$rotation[, 1], 
@@ -159,25 +170,18 @@ loadings_sc$label <- gg_italic(loadings_sc$label, "-")
 loadings_sc$xadj <- c(-0.07, -0.07, -0.07, -0.03, -0.07, -0.07, 0, -0.07, -0.07, -0.07, -0.07, 0, 0)
 loadings_sc$yadj <- c(-0.007, 0.14, 0.06, 0.015, 0.085, 0.013, -0.015, -0.048, 0.115, 0.0375, -0.072, -0.015, 0.02)
 
-p_pca <- autoplot(pca_BVOC_log_rm, 
-                  data = cbind(BVOC_2306_log[, -c(14)], 
-                               population = metadata$population), 
-                  x = 1, y = 2,
-                  color = "population", 
-                  scale = 1
-                  ) +
-  geom_segment(data = loadings_sc, 
-               mapping = aes(x = 0, xend = PC1, y = 0, yend = PC2), 
-               arrow = arrow(length = unit(2.0, "mm")), 
-               color = "grey", 
-               linewidth = .352777778) +
+p_pca <- p_pca + geom_segment(data = loadings_sc, 
+                              mapping = aes(x = 0, xend = PC1, y = 0, yend = PC2), 
+                              arrow = arrow(length = unit(2.0, "mm")), 
+                              color = col_BVOC[-14], 
+                              linewidth = 0.5) +
   geom_text(data = loadings_sc, 
             mapping = aes(x = PC1 + xadj, y = PC2 + yadj, label = label),
             size = 5.5 * .352777778,
-            color = col_BVOC[-14],
+            color = "black",
             parse = TRUE) +
   coord_fixed(ratio = 1) +
-  theme_classic() +
+  theme_classic(base_size = 11) +
   labs(color = "Population") +
   scale_color_manual(values = col_pop, labels = c("Ajigazawa", "Azouji", "Yakushima")) +
   mytheme + theme(legend.position = "none")
@@ -191,12 +195,14 @@ ggsave(plot = p_pca, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June
 #merge plot
 
 ```{r}
-p_pca_none <- p_pca + theme(legend.position = "bottom")
+p_pca_none <- p_pca + theme(legend.position = "bottom", 
+                            legend.title = element_text(size = 7), 
+                            legend.text = element_text(size = 7))
 legend <- gtable_filter(ggplotGrob(p_pca_none), "guide-box")
 p_pca_none <- p_pca + theme(legend.position = "none")
 
-pl_BVOC <- arrangeGrob(p_BVOC, top = create_label("a"))
-pl_pca <- arrangeGrob(p_pca_none, top = create_label("b"))
+pl_BVOC <- arrangeGrob(p_BVOC, top = create_label("A"))
+pl_pca <- arrangeGrob(p_pca_none, top = create_label("B"))
 
 layout <- rbind(c(1, 2), c(1, 3))
 
@@ -208,6 +214,10 @@ p_merge <- grid.arrange(pl_BVOC, pl_pca, legend,
 
 ggsave(plot = p_merge, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/barplot_BVOC_pca.png"), 
        dpi = 300, width = 160, height = 80, units = "mm", scale = 1)
+
+#Don't do below command after editing with Inkscape
+#ggsave(plot = p_merge, filename = paste0(path_out, #"/231202_Sugi_phyllosphere_June_16S/figures/barplot_BVOC_pca1.pdf"), 
+#       dpi = 300, width = 160, height = 80, units = "mm", scale = 1, family = "Helvetica")
 ```
 
 #LM (to test the correlations between latitude and BVOCs emission rates)
@@ -237,21 +247,17 @@ model_pc1_clim <- lm(PC1 ~ PC1_clim + PC2_clim, data = data_pca)
 model_pc2_clim <- lm(PC2 ~ PC1_clim + PC2_clim, data = data_pca)
 model_total_clim <- lm(total ~ PC1_clim + PC2_clim, data = data_pca)
 
-summary(model_pc1_clim)
-summary(model_pc2_clim)
-summary(model_total_clim)
+anova(model_pc1_clim)
+anova(model_pc2_clim)
+anova(model_total_clim)
 #none of the models are significant when both PC1 & PC2 included
 
-write.csv(cbind(summary(model_pc1_clim)$coefficients, 
-                AIC = summary(model_pc1_clim)$aic), 
+write.csv(anova(model_pc1_clim), 
           file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_pc1_glm_climtot.csv"))
-
-write.csv(cbind(summary(model_pc2_clim)$coefficients, 
-                AIC = summary(model_pc2_clim)$aic), 
+write.csv(anova(model_pc2_clim), 
           file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_pc2_glm_climtot.csv"))
 
-write.csv(cbind(summary(model_total_clim)$coefficients, 
-                AIC = summary(model_total_clim)$aic), 
+write.csv(anova(model_total_clim), 
           file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_total_glm_climtot.csv"))
 ```
 
@@ -330,34 +336,34 @@ rownames(PC2clim) <- paste0(rep(c("PC1", "PC2", "total"), each = 2),
 ```{r}
 #climatic PC1
 p_pc1pc1 <- ggplot(data = data_pca, mapping = aes(x = PC1_clim, y = PC1, color = population)) +
-  geom_smooth(method = "lm", color = "black", linewidth = .352777778, alpha = 0.1) +
+  geom_smooth(method = "lm", color = "black", linewidth = .7, alpha = 0.1) +
   geom_point() +
   labs(x = "Climatic PC1", y = "Terpene PC1", color = "Population") +
-  scale_color_manual(values = col_pop, labels = c("Ajigazawa", "Azouji", "Yakushima")) +
-  theme_classic() + mytheme +
+  scale_color_manual(values = col_pop, labels = c("Ajigasawa", "Azouji", "Yakushima")) +
+  theme_classic(base_size = 12) + mytheme +
   NULL
 
 p_pc2pc1 <- ggplot(data = data_pca, mapping = aes(x = PC1_clim, y = PC2, color = population)) +
   geom_point() +
   labs(x = "Climatic PC1", y = "Terpene PC2", color = "Population") +
-  scale_color_manual(values = col_pop, labels = c("Ajigazawa", "Azouji", "Yakushima")) +
-  theme_classic() + mytheme +
+  scale_color_manual(values = col_pop, labels = c("Ajigasawa", "Azouji", "Yakushima")) +
+  theme_classic(base_size = 12) + mytheme +
   NULL
 
 #climatic PC2
 p_pc1pc2 <- ggplot(data = data_pca, mapping = aes(x = PC2_clim, y = PC1, color = population)) +
-  geom_smooth(method = "lm", color = "black", linewidth = .352777778, alpha = 0.1) +
+  geom_smooth(method = "lm", color = "black", linewidth = .7, alpha = 0.1) +
   geom_point() +
   labs(x = "Climatic PC2", y = "Terpene PC1", color = "Population") +
-  scale_color_manual(values = col_pop, labels = c("Ajigazawa", "Azouji", "Yakushima")) +
-  theme_classic() + mytheme +
+  scale_color_manual(values = col_pop, labels = c("Ajigasawa", "Azouji", "Yakushima")) +
+  theme_classic(base_size = 12) + mytheme +
   NULL
 
 p_pc2pc2 <- ggplot(data = data_pca, mapping = aes(x = PC2_clim, y = PC2, color = population)) +
   geom_point() +
   labs(x = "Climatic PC2", y = "Terpene PC2", color = "Population") +
-  scale_color_manual(values = col_pop, labels = c("Ajigazawa", "Azouji", "Yakushima")) +
-  theme_classic() + mytheme +
+  scale_color_manual(values = col_pop, labels = c("Ajigasawa", "Azouji", "Yakushima")) +
+  theme_classic(base_size = 12) + mytheme +
   NULL
 
 show(p_pc1pc1)
@@ -368,20 +374,24 @@ show(p_pc2pc2)
 
 ```{r}
 ##arrange plots
+pl_pc2pc1 <- p_pc2pc1 + theme(legend.position = "bottom")
+legend <- gtable_filter(ggplotGrob(pl_pc2pc1), "guide-box")
 pl_pc1pc1 <- p_pc1pc1 + theme(legend.position = "none")
 pl_pc2pc1 <- p_pc2pc1 + theme(legend.position = "none")
 pl_pc1pc2 <- p_pc1pc2 + theme(legend.position = "none")
 pl_pc2pc2 <- p_pc2pc2 + theme(legend.position = "none")
 
-pl_pc1pc1 <- arrangeGrob(pl_pc1pc1, top = create_label("a"))
-pl_pc1pc2 <- arrangeGrob(pl_pc1pc2, top = create_label("b"))
-pl_pc2pc1 <- arrangeGrob(pl_pc2pc1, top = create_label("c"))
-pl_pc2pc2 <- arrangeGrob(pl_pc2pc2, top = create_label("d"))
+pl_pc1pc1 <- arrangeGrob(pl_pc1pc1, top = create_label("A"))
+pl_pc1pc2 <- arrangeGrob(pl_pc1pc2, top = create_label("B"))
+pl_pc2pc1 <- arrangeGrob(pl_pc2pc1, top = create_label("C"))
+pl_pc2pc2 <- arrangeGrob(pl_pc2pc2, top = create_label("D"))
 
-p_lm <- grid.arrange(pl_pc1pc1, pl_pc1pc2, pl_pc2pc1, pl_pc2pc2, 
-                     nrow = 2)
+layout <- rbind(c(1, 2), c(3, 4), c(5, 5))
 
-ggsave(plot = p_lm, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/LM_terpene_climate.png"), 
+p_lm <- grid.arrange(pl_pc1pc1, pl_pc1pc2, pl_pc2pc1, pl_pc2pc2, legend,
+                     layout_matrix = layout, widths = c(1, 1), heights = c(9, 9, 2))
+
+ggsave(plot = p_lm, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/LM_terpene_climate1.pdf"), 
        dpi = 300, width = 160, height = 120, units = "mm", scale = 1)
 ```
 
