--- a/scripts/pca_BVOC_LODrev.Rmd
+++ b/scripts/pca_BVOC_LODrev.Rmd
@@ -82,18 +82,6 @@ colnames(df_pcaclim) <- paste0(colnames(df_pcaclim), "_clim")
 
 #merge population metadata and PCA result
 meta_pop <- cbind(meta_pop, df_pcaclim)
-
-#basal emission rates of BVOCs
-BVOC_2306 <- read_excel(paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/BVOC/BVOC_summary_240122.xlsx"), 
-                       sheet = "2306_KAWATABI")
-BVOC_2306 <- column_to_rownames(BVOC_2306, var = "samplename")
-nonitalic <- greek(colnames(BVOC_2306))
-colnames(BVOC_2306) <- html_italic(colnames(BVOC_2306), sep = "-")
-colnames(BVOC_2306) <- greek(colnames(BVOC_2306))
-
-#log-transformed BVOC emission data
-load(paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/BVOC/BVOC_2306_16S_log.Rdata"))
-colnames(BVOC_2306_log) <- greek(colnames(BVOC_2306_log))
 ```
 
 #theme settings
@@ -109,6 +97,7 @@ mytheme <-theme(text = element_text(color = "black"),
 #Barplot of basal emission rate
 
 ```{r}
+#make the dataframe to draw a barplot
 #gather the emission data before plotting
 BVOC_2306_ga <- rownames_to_column(assay(BVOC_2306), var = "sampleID")
 BVOC_2306_ga <- full_join(BVOC_2306_ga,
@@ -120,16 +109,17 @@ BVOC_2306_ga <- pivot_longer(BVOC_2306_ga,
                              values_to = "emission")
 
 labeller <- c(AJ = "Ajigasawa", AZ = "Azouji", YK = "Yakushima")
-```
-#YET TO BE DONE
-```{r}
-#assign colors to each terpene
-col_BVOC <- c(colorRampPalette(c("green2", "grey30", "yellow2"))(12), 
-              "purple3", "blue3")
-names(col_BVOC) <- colnames(BVOC_2306)
 
+#assign colors to each terpene
+col_BVOC <- c(colorRampPalette(c("green2", "grey30", "yellow2"))(12), #MTs
+              colorRampPalette(c("purple", "purple3"))(2), #SQTs 
+              colorRampPalette(c("skyblue", "blue4"))(2)) #DTs
+names(col_BVOC) <- colnames(BVOC_2306)
+```
+
+```{r}
 #draw barplot
-p_BVOC <- ggplot(data = BVOC_2306_ga, mapping = aes(x = ID, y = emission, 
+p_BVOC <- ggplot(data = BVOC_2306_ga, mapping = aes(x = sampleID, y = emission, 
                                                     fill = factor(BVOC, 
                                                                   levels = colnames(BVOC_2306))))
 p_BVOC <- p_BVOC + geom_bar(stat = "identity")
@@ -137,8 +127,8 @@ p_BVOC <- p_BVOC + theme_classic(base_size = 11)
 p_BVOC <- p_BVOC + mytheme
 p_BVOC <- p_BVOC + scale_fill_manual(values = col_BVOC)
 p_BVOC <- p_BVOC + scale_y_continuous(labels = label_comma())
-p_BVOC <- p_BVOC + facet_wrap(~ population, scales = "free_x", 
-                              labeller = labeller(population = labeller))
+p_BVOC <- p_BVOC + facet_wrap(~ Population, scales = "free_x", 
+                              labeller = labeller(Population = labeller))
 p_BVOC <- p_BVOC + labs(fill = "Terpenes") +
   ylab(expression(paste("Basal emission rate (ng ", {gdw^-1}, " ", {h^-1}, ")"))) +
   labs()
@@ -151,58 +141,65 @@ p_BVOC <- p_BVOC + mytheme +
         axis.text.x = element_blank())
 show(p_BVOC)
 
-ggsave(plot = p_BVOC, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/barplot_BVOC.pdf"), 
+ggsave(plot = p_BVOC, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/barplot_BVOC_LODrev.pdf"), 
        dpi = 300, width = 160, height = 80, units = "mm")
 ```
 
 #pca
 
 ```{r}
-#remove kaurene from dataframe
-#sapply(c("kaurene"), grep, colnames(BVOC_log_ps))
-pca_BVOC_log_rm <- prcomp(BVOC_2306_log[, -c(14)], 
-                          scale. = TRUE)
-summary(pca_BVOC_log_rm)
+#remove beta-Caryophyllene from dataframe
+bCary <- which("beta-Caryophyllene" == colnames(BVOC_2306_log)) #the column number of beta-Caryophyllene
 
-#save(pca_BVOC_log_rm, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/processed_data/BVOC/pca_BVOC_2306_16S_log.Rdata"))
+BVOC_2306_log_rm <- assay(BVOC_2306_log)[, -bCary] #remove beta-Caryophyllene
+
+pca_BVOC_log_rm_LODrev <- prcomp(BVOC_2306_log_rm, 
+                          scale. = TRUE)
+summary(pca_BVOC_log_rm_LODrev)
+
+save(pca_BVOC_log_rm_LODrev, file = paste0(path_out, "/data/Sugi/BVOC/pca_BVOC_2306_log_LODrev.Rdata"))
 ```
 
 ```{r}
-col_BVOC <- c(rep("green3", 12), "purple3", "blue3")
+#load(paste0(path_out, "/data/Sugi/BVOC/pca_BVOC_2306_log_LODrev.Rdata"))
+col_BVOC <- c(rep("green3", 12), "purple3", rep("blue3", 2))
 col_pop <- colorRampPalette(c("dodgerblue", "orangered"))(3)
 
-p_pca <- autoplot(pca_BVOC_log_rm, 
-                  data = cbind(BVOC_2306_log[, -c(14)], 
-                               population = metadata$population), 
+p_pca <- autoplot(pca_BVOC_log_rm_LODrev, 
+                  data = full_join(rownames_to_column(BVOC_2306_log_rm, var = "sampleID"),
+                                   data.frame(rowData(BVOC_2306_log)) %>% dplyr::select(sampleID, Population),
+                          by = "sampleID"), 
                   x = 1, y = 2,
-                  color = "population", 
-                  scale = 1
-                  )
+                  color = "Population", 
+                  scale = 1,
+                  loadings = TRUE,
+                  loadings.colour = col_BVOC,
+                  loadings.label = TRUE,
+                  loadings.label.size = 5.5 * .352777778,
+                  loadings.label.colour = "black"
+                  ) +
 
 #scale loading vectors
 #see https://rdrr.io/cran/ggfortify/src/R/plotlib.R
-loadings_sc <- data.frame(PC1 = pca_BVOC_log_rm$rotation[, 1], 
-                          PC2 = pca_BVOC_log_rm$rotation[, 2], 
-                          label = rownames(pca_BVOC_log_rm$rotation))
-scaler <- min(max(abs(p_pca$data$PC1)) / max(abs(loadings_sc$PC1)),
-              max(abs(p_pca$data$PC1)) / max(abs(loadings_sc$PC2)))
-
-loadings_sc[, 1:2] <- loadings_sc[, 1:2] * scaler * 0.8
-loadings_sc$label <- gg_italic(loadings_sc$label, "-")
-#adjustment for the label positions
-loadings_sc$xadj <- c(-0.07, -0.07, -0.07, -0.03, -0.07, -0.07, 0, -0.07, -0.07, -0.07, -0.07, 0, 0)
-loadings_sc$yadj <- c(-0.007, 0.14, 0.06, 0.015, 0.085, 0.013, -0.015, -0.048, 0.115, 0.0375, -0.072, -0.015, 0.02)
-
-p_pca <- p_pca + geom_segment(data = loadings_sc, 
-                              mapping = aes(x = 0, xend = PC1, y = 0, yend = PC2), 
-                              arrow = arrow(length = unit(2.0, "mm")), 
-                              color = col_BVOC[-14], 
-                              linewidth = 0.5) +
-  geom_text(data = loadings_sc, 
-            mapping = aes(x = PC1 + xadj, y = PC2 + yadj, label = label),
-            size = 5.5 * .352777778,
-            color = "black",
-            parse = TRUE) +
+#loadings_sc <- data.frame(PC1 = pca_BVOC_log_rm_LODrev$rotation[, 1], 
+#                          PC2 = pca_BVOC_log_rm_LODrev$rotation[, 2], 
+#                          label = rownames(pca_BVOC_log_rm_LODrev$rotation))
+#scaler <- min(max(abs(p_pca$data$PC1)) / max(abs(loadings_sc$PC1)),
+#              max(abs(p_pca$data$PC1)) / max(abs(loadings_sc$PC2)))
+#
+#loadings_sc[, 1:2] <- loadings_sc[, 1:2] * scaler * 0.8
+#loadings_sc$label <- gg_italic(loadings_sc$label, "-")
+#
+#p_pca <- p_pca + geom_segment(data = loadings_sc, 
+#                              mapping = aes(x = 0, xend = PC1, y = 0, yend = PC2), 
+#                              arrow = arrow(length = unit(2.0, "mm")), 
+#                              color = col_BVOC, 
+#                              linewidth = 0.5) +
+#  geom_text(data = loadings_sc, 
+#            mapping = aes(x = PC1, y = PC2, label = label),
+#            size = 5.5 * .352777778,
+#            color = "black",
+#            parse = TRUE) +
   coord_fixed(ratio = 1) +
   theme_classic(base_size = 11) +
   labs(color = "Population") +
@@ -211,7 +208,35 @@ p_pca <- p_pca + geom_segment(data = loadings_sc,
 
 show(p_pca)
 
-ggsave(plot = p_pca, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/pca_BVOC_log.png"), 
+ggsave(plot = p_pca, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/pca_BVOC_log_LODrev.png"), 
+       dpi = 300, width = 160, height = 160, units = "mm")
+```
+
+```{r}
+#PC2 and PC3
+p_pca23 <- autoplot(pca_BVOC_log_rm_LODrev,
+                    data = full_join(rownames_to_column(BVOC_2306_log_rm, var = "sampleID"),
+                                     data.frame(rowData(BVOC_2306_log)) %>% dplyr::select(sampleID, Population),
+                                     by = "sampleID"),
+                    x = 2, y = 3,
+                    color = "Population",
+                    scale = 1,
+                    loadings = TRUE,
+                    loadings.colou = col_BVOC,
+                    loadings.label = TRUE,
+                    loadings.label.size = 5.5 * .352777778,
+                    loadings.label.colour = "black"
+                    ) +
+  coord_fixed(ratio = 1) +
+  theme_classic(base_size = 11) +
+  labs(color = "Population") +
+  scale_color_manual(values = col_pop, labels = c("Ajigazawa", "Azouji", "Yakushima")) +
+  mytheme + theme(legend.position = "none")
+
+show(p_pca23)
+
+ggsave(plot = p_pca23,
+       filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/pca_BVOC_log_LODrev23.png"), 
        dpi = 300, width = 160, height = 160, units = "mm")
 ```
 
@@ -235,11 +260,13 @@ p_merge <- grid.arrange(pl_BVOC, pl_pca, legend,
                         heights = c(9, 1)
                         )
 
-ggsave(plot = p_merge, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/barplot_BVOC_pca.png"), 
+ggsave(plot = p_merge,
+       filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/barplot_BVOC_pca_LODrev.png"),
        dpi = 300, width = 160, height = 80, units = "mm", scale = 1)
 
 #Don't do below command after editing with Inkscape
-#ggsave(plot = p_merge, filename = paste0(path_out, #"/231202_Sugi_phyllosphere_June_16S/figures/barplot_BVOC_pca1.pdf"), 
+#ggsave(plot = p_merge,
+#       filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/barplot_BVOC_pca1_LODrev.pdf"), 
 #       dpi = 300, width = 160, height = 80, units = "mm", scale = 1, family = "Helvetica")
 ```
 
@@ -248,117 +275,85 @@ ggsave(plot = p_merge, filename = paste0(path_out, "/231202_Sugi_phyllosphere_Ju
 ```{r}
 #to test the differences of PC1, 2 among groups, perform ANOVA test
 #merge metadata and the result of PCA
-data_pca <- rownames_to_column(data.frame(pca_BVOC_log_rm$x))
-data_pca <- merge(metadata, data_pca, by.x = "samplename", by.y = "rowname")
+data_pca <- rownames_to_column(data.frame(pca_BVOC_log_rm_LODrev$x), var = "sampleID")
+data_pca <- full_join(data.frame(rowData(BVOC_2306_log)) %>% dplyr::select(sampleID,
+                                                                           Population,
+                                                                           latitude,
+                                                                           longitude,
+                                                                           altitude,
+                                                                           PC1_clim,
+                                                                           PC2_clim),
+                      data_pca,
+                      by = "sampleID")
 
 #merge log-transformed total basal emission rate
-df_total <- data.frame(total = BVOC_2306_total_log)
-df_total <- rownames_to_column(df_total)
-data_pca <- merge(data_pca, df_total, by.x = "samplename", by.y = "rowname")
+df_total <- data.frame(total = log(rowSums(assay(BVOC_2306)), base = 10))
+df_total <- rownames_to_column(df_total, var = "sampleID")
+data_pca <- full_join(data_pca, df_total, by = "sampleID")
 
-#merge BVOCs emission profile
-df_BVOC <- rownames_to_column(BVOC_2306_log)
-data_pca <- merge(data_pca, df_BVOC, by.x = "samplename", by.y = "rowname")
-
-#merge population metadata
-data_pca <- merge(data_pca, meta_pop, by.x = "population", by.y = "population", all.x = TRUE)
+data_pca <- full_join(data_pca,
+                      BVOC_2306_log_rm %>% rownames_to_column(var = "sampleID"),
+                      by = "sampleID")
 ```
 
 ```{r}
 #full model (use PC1 and PC2 for climatic data)
 model_pc1_clim <- lm(PC1 ~ PC1_clim + PC2_clim, data = data_pca)
 model_pc2_clim <- lm(PC2 ~ PC1_clim + PC2_clim, data = data_pca)
+model_pc3_clim <- lm(PC3 ~ PC1_clim + PC2_clim, data = data_pca)
 model_total_clim <- lm(total ~ PC1_clim + PC2_clim, data = data_pca)
 
 anova(model_pc1_clim)
 anova(model_pc2_clim)
+anova(model_pc3_clim)
 anova(model_total_clim)
-#none of the models are significant when both PC1 & PC2 included
+#terpene PC1 is significantly positively correlated with climatic PC1, while terpene PC3 is significantly negatively correlated with climatic PC1
 
 write.csv(anova(model_pc1_clim), 
-          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_pc1_glm_climtot.csv"))
+          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_pc1_AOV_climtot_LODrev.csv"))
 write.csv(anova(model_pc2_clim), 
-          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_pc2_glm_climtot.csv"))
-
+          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_pc2_AOV_climtot_LODrev.csv"))
+write.csv(anova(model_pc3_clim),
+          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_pc3_AOV_climtot_LODrev.csv"))
 write.csv(anova(model_total_clim), 
-          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_total_glm_climtot.csv"))
+          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_total_AOV_climtot_LODrev.csv"))
 ```
 
-##test multicollinearity
+##model selection
 
 ```{r}
-vif(model_pc1_clim)
-#multicollinearity is not detected
+#Since the climatic PC1 is perfectly corresponded to the climatic PC2, we can use either of them as an explanatory variable
+#perform model selection
+sel_pc1_clim <- stepAIC(model_pc1_clim)
+sel_pc2_clim <- stepAIC(model_pc2_clim)
+sel_pc3_clim <- stepAIC(model_pc3_clim)
+sel_total_clim <- stepAIC(model_total_clim)
 
-#perform model selection and compare results with one covariate models
-set.seed(123)
-selc_PC1_clim <- stepAIC(model_pc1_clim)
-selc_PC2_clim <- stepAIC(model_pc2_clim)
-selc_total_clim <- stepAIC(model_total_clim)
-#PC1 for climatic data was selected only for the terpene PC1 model
-```
+summary(sel_pc1_clim)
+summary(sel_pc2_clim)
+summary(sel_pc3_clim)
+summary(sel_total_clim)
 
-###climatic PC1
+write.csv(cbind(summary(sel_pc1_clim)$coefficients, 
+                AIC = summary(sel_pc1_clim)$aic), 
+          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_pc1_sel_clim_LODrev.csv"))
 
-```{r}
-#output models with climatic PC1 as an explanatory variable
-model_pc1_clim <- lm(PC1 ~ PC1_clim, data = data_pca)
-model_pc2_clim <- lm(PC2 ~ PC1_clim, data = data_pca)
-model_total_clim <- lm(total ~ PC1_clim, data = data_pca)
-
-write.csv(cbind(summary(model_pc1_clim)$coefficients, 
-                AIC = summary(model_pc1_clim)$aic), 
-          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_pc1_glm_clim.csv"))
-
-write.csv(cbind(summary(model_pc2_clim)$coefficients, 
-                AIC = summary(model_pc2_clim)$aic), 
-          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_pc2_glm_clim.csv"))
-
-write.csv(cbind(summary(model_total_clim)$coefficients, 
-                AIC = summary(model_total_clim)$aic), 
-          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_total_glm_clim.csv"))
-
-PC1clim <- rbind(summary(model_pc1_clim)$coefficient, 
-                 summary(model_pc2_clim)$coefficient, 
-                 summary(model_total_clim)$coefficient)
-rownames(PC1clim) <- paste0(rep(c("PC1", "PC2", "total"), each = 2),
-                            rep(c("Intercept", "PC1_clim"), 3)
-                            )
-```
-
-###climatic PC2
-
-```{r}
-#output models with climatic PC2 as an explanatory variable
-model_pc1_clim <- lm(PC1 ~ PC2_clim, data = data_pca)
-model_pc2_clim <- lm(PC2 ~ PC2_clim, data = data_pca)
-model_total_clim <- lm(total ~ PC2_clim, data = data_pca)
-
-write.csv(cbind(summary(model_pc1_clim)$coefficients, 
-                AIC = summary(model_pc1_clim)$aic), 
-          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_pc1_glm_clim2.csv"))
-
-write.csv(cbind(summary(model_pc2_clim)$coefficients, 
-                AIC = summary(model_pc2_clim)$aic), 
-          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_pc2_glm_clim2.csv"))
-
-write.csv(cbind(summary(model_total_clim)$coefficients, 
-                AIC = summary(model_total_clim)$aic), 
-          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_total_glm_clim2.csv"))
-
-PC2clim <- rbind(summary(model_pc1_clim)$coefficient, 
-                 summary(model_pc2_clim)$coefficient, 
-                 summary(model_total_clim)$coefficient)
-rownames(PC2clim) <- paste0(rep(c("PC1", "PC2", "total"), each = 2),
-                            rep(c("Intercept", "PC2_clim"), 3)
-                            )
+write.csv(cbind(summary(sel_pc2_clim)$coefficients, 
+                AIC = summary(sel_pc2_clim)$aic), 
+          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_pc2_sel_clim_LODrev.csv"))
+write.csv(cbind(summary(sel_pc3_clim)$coefficients, 
+                AIC = summary(sel_pc3_clim)$aic),
+          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_pc3_sel_clim_LODrev.csv"))
+write.csv(cbind(summary(sel_total_clim)$coefficients, 
+                AIC = summary(sel_total_clim)$aic), 
+          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_total_sel_clim_LODrev.csv"))
 ```
 
 ##plot LM with climatic PCs
 
 ```{r}
 #climatic PC1
-p_pc1pc1 <- ggplot(data = data_pca, mapping = aes(x = PC1_clim, y = PC1, color = population)) +
+p_pc1pc1 <- ggplot(data = data_pca, mapping = aes(x = PC1_clim, y = PC1, color = Population)) +
   geom_smooth(method = "lm", color = "black", linewidth = .7, alpha = 0.1) +
   geom_point() +
   labs(x = "Climatic PC1", y = "Terpene PC1", color = "Population") +
@@ -366,33 +361,49 @@ p_pc1pc1 <- ggplot(data = data_pca, mapping = aes(x = PC1_clim, y = PC1, color =
   theme_classic(base_size = 12) + mytheme +
   NULL
 
-p_pc2pc1 <- ggplot(data = data_pca, mapping = aes(x = PC1_clim, y = PC2, color = population)) +
+p_pc2pc1 <- ggplot(data = data_pca, mapping = aes(x = PC1_clim, y = PC2, color = Population)) +
   geom_point() +
   labs(x = "Climatic PC1", y = "Terpene PC2", color = "Population") +
   scale_color_manual(values = col_pop, labels = c("Ajigasawa", "Azouji", "Yakushima")) +
   theme_classic(base_size = 12) + mytheme +
   NULL
 
-#climatic PC2
-p_pc1pc2 <- ggplot(data = data_pca, mapping = aes(x = PC2_clim, y = PC1, color = population)) +
+p_pc3pc1 <- ggplot(data = data_pca, mapping = aes(x = PC1_clim, y = PC3, color = Population)) +
   geom_smooth(method = "lm", color = "black", linewidth = .7, alpha = 0.1) +
+  geom_point() +
+  labs(x = "Climatic PC1", y = "Terpene PC3", color = "Population") +
+  scale_color_manual(values = col_pop, labels = c("Ajigasawa", "Azouji", "Yakushima")) +
+  theme_classic(base_size = 12) + mytheme +
+  NULL
+
+#climatic PC2
+p_pc1pc2 <- ggplot(data = data_pca, mapping = aes(x = PC2_clim, y = PC1, color = Population)) +
   geom_point() +
   labs(x = "Climatic PC2", y = "Terpene PC1", color = "Population") +
   scale_color_manual(values = col_pop, labels = c("Ajigasawa", "Azouji", "Yakushima")) +
   theme_classic(base_size = 12) + mytheme +
   NULL
 
-p_pc2pc2 <- ggplot(data = data_pca, mapping = aes(x = PC2_clim, y = PC2, color = population)) +
+p_pc2pc2 <- ggplot(data = data_pca, mapping = aes(x = PC2_clim, y = PC2, color = Population)) +
   geom_point() +
   labs(x = "Climatic PC2", y = "Terpene PC2", color = "Population") +
   scale_color_manual(values = col_pop, labels = c("Ajigasawa", "Azouji", "Yakushima")) +
   theme_classic(base_size = 12) + mytheme +
   NULL
 
+p_pc3pc2 <- ggplot(data = data_pca, mapping = aes(x = PC2_clim, y = PC3, color = Population)) +
+  geom_point() +
+  labs(x = "Climatic PC2", y = "Terpene PC3", color = "Population") +
+  scale_color_manual(values = col_pop, labels = c("Ajigasawa", "Azouji", "Yakushima")) +
+  theme_classic(base_size = 12) + mytheme +
+  NULL
+
 show(p_pc1pc1)
 show(p_pc2pc1)
+show(p_pc3pc1)
 show(p_pc1pc2)
 show(p_pc2pc2)
+show(p_pc3pc2)
 ```
 
 ```{r}
@@ -401,49 +412,24 @@ pl_pc2pc1 <- p_pc2pc1 + theme(legend.position = "bottom")
 legend <- gtable_filter(ggplotGrob(pl_pc2pc1), "guide-box")
 pl_pc1pc1 <- p_pc1pc1 + theme(legend.position = "none")
 pl_pc2pc1 <- p_pc2pc1 + theme(legend.position = "none")
+pl_pc3pc1 <- p_pc3pc1 + theme(legend.position = "none")
 pl_pc1pc2 <- p_pc1pc2 + theme(legend.position = "none")
 pl_pc2pc2 <- p_pc2pc2 + theme(legend.position = "none")
+pl_pc3pc2 <- p_pc3pc2 + theme(legend.position = "none")
 
 pl_pc1pc1 <- arrangeGrob(pl_pc1pc1, top = create_label("A"))
 pl_pc1pc2 <- arrangeGrob(pl_pc1pc2, top = create_label("B"))
 pl_pc2pc1 <- arrangeGrob(pl_pc2pc1, top = create_label("C"))
 pl_pc2pc2 <- arrangeGrob(pl_pc2pc2, top = create_label("D"))
+pl_pc3pc1 <- arrangeGrob(pl_pc3pc1, top = create_label("E"))
+pl_pc3pc2 <- arrangeGrob(pl_pc3pc2, top = create_label("F"))
 
-layout <- rbind(c(1, 2), c(3, 4), c(5, 5))
+layout <- rbind(c(1, 2), c(3, 4), c(5, 6), c(7, 7))
 
-p_lm <- grid.arrange(pl_pc1pc1, pl_pc1pc2, pl_pc2pc1, pl_pc2pc2, legend,
-                     layout_matrix = layout, widths = c(1, 1), heights = c(9, 9, 2))
+p_lm <- grid.arrange(pl_pc1pc1, pl_pc1pc2, pl_pc2pc1, pl_pc2pc2, pl_pc3pc1, pl_pc3pc2, legend,
+                     layout_matrix = layout, widths = c(1, 1), heights = c(9, 9, 9, 3))
 
-ggsave(plot = p_lm, filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/LM_terpene_climate1.pdf"), 
-       dpi = 300, width = 160, height = 120, units = "mm", scale = 1)
+ggsave(plot = p_lm,
+       filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/figures/LM_terpene_climate1_LODrev.pdf"), 
+       dpi = 300, width = 160, height = 160, units = "mm", scale = 1)
 ```
-
-##adjusted p value
-
-```{r}
-adjust <- rbind(PC1clim[c(2, 4), ], PC2clim[c(2, 4), ])
-adjust <- cbind(adjust, p_adj = p.adjust(adjust[, 4], method = "fdr"))
-```
-
-```{r}
-model_pc1 <- glm(PC1 ~ latitude, data = data_pca)
-model_pc2 <- glm(PC2 ~ latitude, data = data_pca)
-model_total <- glm(total ~ latitude, data = data_pca)
-
-summary(model_pc1)
-summary(model_pc2)
-summary(model_total)
-
-write.csv(cbind(summary(model_pc1)$coefficients, 
-                AIC = summary(model_pc1)$aic), 
-          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_pc1_glm.csv"))
-
-write.csv(cbind(summary(model_pc2)$coefficients, 
-                AIC = summary(model_pc2)$aic), 
-          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_pc2_glm.csv"))
-
-write.csv(cbind(summary(model_total)$coefficients, 
-                AIC = summary(model_total)$aic), 
-          file = paste0(path_out, "/231202_Sugi_phyllosphere_June_16S/analysis/BVOC_total_glm.csv"))
-```
-
